bg(auth): add authentication to book request
add authentication to book request route
edit docs to reflect new updates on books
