# server/db/seeders/20190606200927-demo-books.js
@@ -4,6 +4,7 @@ import faker from 'faker';
 
 const date = new Date();
 const seeds = 500;
+const status = [ 'Available', 'Borrowed'];
 let i;
 const bookSeeds = [];
 for (i = 0; i < seeds; i += 1) {
@@ -12,7 +13,7 @@ for (i = 0; i < seeds; i += 1) {
     description: faker.lorem.sentence(),
     amount: faker.commerce.price(),
     authorID: 1,
-    active: faker.random.boolean(),
+    status: status[Math.floor(Math.random() * status.length)],
     categoryID: faker.random.number({'min': 1, 'max': 10}),
     year: faker.random.number({'min': 1900, 'max': 2019}),
     isbn: faker.random.number({'min': 1934564, 'max': 3934564}),
