# server/routes/bookRoute.js
@@ -1,6 +1,7 @@
 import express from 'express';
 import BookController from '../controllers/bookController';
 import Validate from '../middleware/validation';
+import Authenticate from '../middleware/authenticator';
 
 const bookRoute = express.Router();
 
@@ -8,6 +9,7 @@ bookRoute.post('/', Validate.addBook, BookController.addBook);
 bookRoute.get('/', BookController.getAllBooks);
 bookRoute.get('/:id', Validate.id, BookController.getSpecificBook);
 bookRoute.delete('/:id', Validate.id, BookController.deleteBook);
-bookRoute.post('/request',  Validate.requestBook, BookController.requestBook)
+bookRoute.post('/request', 
+Authenticate.isloggedIn, Validate.requestBook, BookController.requestBook)
 
 export default bookRoute;
